Fix definition of kobboi-linux sets

--- a/sets.conf
+++ b/sets.conf
@@ -1,5 +1,5 @@
-[kobboi sets]
+[kobboi-linux sets]
 class = portage.sets.files.StaticFileSet
 multiset = true
-directory = ${repository:gentoo}/sets/
+directory = ${repository:kobboi-linux}/sets/
 world-candidate = True
